Cambios prevencion y curso-cultura-salud

--- a/src/app/pages/curso-cultura-salud/curso-cultura-salud.component.html
+++ b/src/app/pages/curso-cultura-salud/curso-cultura-salud.component.html
@@ -1,7 +1,7 @@
-<app-back-button></app-back-button>
+<app-banner [title]="'Construyendo una Cultura de Seguridad y Salud'" />
 
 <main>
-    <h1>Construyendo una Cultura de Seguridad y Salud</h1>
+    <h1></h1>
 
     <p>El 28 de abril se celebró el Día Mundial de la Seguridad y la Salud en el Trabajo, proclamado por la Organización Internacional del Trabajo (OIT), donde se realiza una campaña anual e internacional para promover el trabajo seguro, saludable y digno. En vista del Día Mundial de la Seguridad y Salud en el Trabajo 2022, esta se centrará en la participación y el diálogo social en la creación de una cultura de seguridad y salud positiva.
 
