--- a/src/app/pages/prevencion-ets/prevencion-ets.component.html
+++ b/src/app/pages/prevencion-ets/prevencion-ets.component.html
@@ -1,10 +1,15 @@
-<app-back-button></app-back-button>
+<app-banner [title]="'Charla de Prevención de las ETS'" />
+
 
 <main>
-    <h1>Charla de Prevención de las ETS</h1>
-
-    <p>El Servicios Médico de la Universidad Dr. Rafael Belloso Chacin, realizaron en el Marco de la semana del Amor y la Amistad, charlas educativas sobre las Enfermedades de Transmisión Sexual (E.T.S.) a los estudiantes que acudieron al área de emergencia a solicitar atención médica y las enfermeras de ambos Turnos les hablaron sobre estas enfermedades, esto con el propósito de promover la prevención, Contrarrestar la promiscuidad y concientizar sobre la sexualidad sana.
+    <br>
+    <br>
+    <br>
+    <p class="prevencion">El Servicios Médico de la Universidad Dr. Rafael Belloso Chacin, realizaron en el Marco de la semana del Amor y la Amistad, charlas educativas sobre las Enfermedades de Transmisión Sexual (E.T.S.) a los estudiantes que acudieron al área de emergencia a solicitar atención médica y las enfermeras de ambos Turnos les hablaron sobre estas enfermedades, esto con el propósito de promover la prevención, Contrarrestar la promiscuidad y concientizar sobre la sexualidad sana.
     </p>
+    <br>
+    <br>
+    <br>
 
     <img [src]="ets_img" [ngStyle]="{'border-radius': '15px', 'height': '380px', 'width': '540px'}" alt="">
 </main>
