Añadido componentes reutiizables

--- a/src/app/pages/centro-idiomas/centro-idiomas.component.scss
+++ b/src/app/pages/centro-idiomas/centro-idiomas.component.scss
@@ -1,4 +1,4 @@
-@use "../../../../../scss/components/navbar" as *;
+@use "../../../scss/components/navbar" as *;
 @use "../../../scss/layout/index" as *;
 
 .page-wrapper {
